syntax = "proto3";

package movies_persons_service;
option go_package = "movies_persons_service/v1/protos";


message GetMoviePersonsRequest {
  string PersonsIDs = 1[json_name="persons_ids"];
}

message Person {
  string ID = 1[json_name="id"];
  string fullnameRU =2[json_name="fullname_ru"];
  string fullnameEN =3[json_name="fullname_en"];
  string birthday = 4;
  string sex = 5;
  string photoUrl = 6[json_name="photo_url"];
}

message Persons {
  map<string, Person> persons = 1;
}

message UserErrorMessage { string message = 1 [ json_name = "message" ]; }